Bug 366410 - ff/tb crashes when gtk settings are changed [@nsLookAndFeel::InitColors()], s+sr=roc